spacing fix

--- a/src/assets/styles/_category.scss
+++ b/src/assets/styles/_category.scss
@@ -7,6 +7,7 @@
 }
 
 .category_links {
+  margin-bottom: 1em;
   display: grid;
   grid-gap: 1em;
   @include media(">=tablet") {
